app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */
* {
    margin: 0;
}
body {
    background-color: #FAf9f9;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.notice-container {
    height: 8px;
    margin-left: 16px;
    display: flex;
    color: green;
    font-size: medium;
    font-style: italic;
}

a {
    text-decoration: none;
    color: #FAf9f9;
    font-size: large;
}

 .alert {
    color: red;
 }

.navbar {
    display: grid;
    grid-template-columns: 3fr 1fr;
    height: 3rem;
    background-color: #555B6E;
    border-radius: 10px;
    margin: 16px;
}
 .nav-links, .login-links {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 3rem;
    padding-left: 3rem;
 }

 .login-links {
    justify-content: end;
    padding-right: 3rem;
 }


/* Below for post index styling */
 .page-wrapper {
    display: flex;
    flex-direction: column;
    margin: 16px;
    gap: 16px
 }

 .post-display {
    display: grid;
    /* The below CSS is for auto-arranging multiple posts */
    /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
 }

 .post-page h2 {
    background-color: #FAf9f9;
    padding: 15px;
 }

.post {
    background-color: #89B0AE;
    padding: 16px;
}
.post a {
    color: #FFD6BA
}

.post p, 
.post a {
    margin: 8px;
}

.title {
    font-size: 2rem;
    font-weight: 700;
}

.author {
    font-size: 1.5rem;
    font-weight: 700;
}

.post-body, 
.likes {
    font-size: 1.2rem;
}

button {
    background-color: #FFD6BA;
    border: 1px solid #555B6E;
    font-size: 1rem;
    padding: 8px 16px;
    border-radius: 5px;
}

/* Below for post Show styling */


.comments-section,
.comment-wrapper {
    display: flex;
    flex-direction: column;
    gap: 16px;
    background-color: #89B0AE;
    padding: 8px 16px;
    background-color: #89B0AE;
    border-radius: 10px;
}

.displayed-comment,
.new-comment {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.form-title {
    font-size: 1.3rem;
    font-weight: 500;
}
.new-comment button {

}

